--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <!-- meta & title -->
     <title>Hodwini Empire</title>
@@ -9,6 +9,7 @@
 
     <!-- link & scripts-->
     <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="shortcut icon" href="/assets/img/logo.png" type="image/x-icon"
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css" integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -20,34 +21,34 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.min.js" integrity="sha384-VHvPCCyXqtD5DqJeNxl2dtTyhF78xXNXdkwX1CZeRusQfRKp+tA7hAShOK/B/fQ2" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-fQybjgWLrvvRgtW6bFlB7jaZrFsaBXjsOMm/tB9LTS58ONXgqbR9W8oWht/amnpF" crossorigin="anonymous"></script>
+
 </head>
 <body>
-  <!--  navbar -->
-  <section class="home" style="width: 100%;height: 1080px;background: url(./assets/img/bg1.png);background-position: center;background-size:cover;"> 
-    <nav class="navbar navbar-expand-lg navbar-light ">
-        <a class="navbar-brand" href="#"><b>HODWINI</b></a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#myNavbarToggler10"
-            aria-controls="myNavbarToggler10" aria-expanded="false" aria-label="Toggle navigation">
+<!-- navbar -->
+<section class="home" style="width: 100; height: 1080px; background: url(./assets/img/bg1.png); background-position: center; background-size: cover;">
+    <u class="navbar navbar-expand-lg navbag-light">
+        <a class="navbar-brand" href="#"> <b>HODWINI EMPIRE</b></a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#myNavbarToggler10" aria-controls="myNavbarToggler10" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
+
+        <!-- collapse navbar -->
         <div class="collapse navbar-collapse" id="myNavbarToggler10">
             <ul class="navbar-nav mx-auto">
                 <li class="nav-item">
-                    <a class="nav-link " id="active" href="#">Главная</a>
+                    <a class="nav-link" id="active" href="#">Главная</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Правила</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Документация</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Донат</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Играть</a>
+                    <a class="nav-link" id="active" href="#">Правила</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" id="active" href="#">Пожертвования</a>
+                    </li>
+                    <li class="nav-link" id="active" href="#">Играть</li>
                 </li>
             </ul>
+
+            <!-- navbar icon-->
             <ul class="navbar-nav sm-icons mr-0">
                 <li class="nav-item"><a class="nav-icon" href="#"><i class="fa-brands fa-telegram" style="font-size: 30px;"></i></a></li>
                 <li class="nav-item"><a class="nav-icon" href="#"><i class="c240 fab fa-vk "style="font-size: 30px;" ></i></a></li>
@@ -55,6 +56,6 @@
             </ul>
         </div>
     </nav>
-  </section>
+</section>
 </body>
 </html>
